--- a/MDK-ARM/Receiver/Receiver.build_log.htm
+++ b/MDK-ARM/Receiver/Receiver.build_log.htm
@@ -17,20 +17,19 @@ Library Manager: ArmAr.exe V5.06 update 7 (build 960)
 Hex Converter:   FromElf.exe V5.06 update 7 (build 960)
 CPU DLL:         SARMCM3.DLL V5.36.0.0
 Dialog DLL:      DCM.DLL V1.17.3.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
+Target DLL:      UL2CM3.DLL V1.164.0.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
 E:\Receiver\MDK-ARM\Receiver.uvprojx
-Project File Date:  07/14/2022
+Project File Date:  07/15/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'E:\Program Files\Keil\ARM\ARMCC\Bin'
 Build target 'Receiver'
-compiling usart.c...
 compiling main.c...
 linking...
-Program Size: Code=10368 RO-data=292 RW-data=24 ZI-data=1208  
+Program Size: Code=11816 RO-data=292 RW-data=24 ZI-data=1280  
 FromELF: creating hex file...
 "Receiver\Receiver.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +54,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.5.0
-Build Time Elapsed:  00:00:05
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
