--- a/MDK-ARM/Receiver/Receiver.build_log.htm
+++ b/MDK-ARM/Receiver/Receiver.build_log.htm
@@ -28,10 +28,15 @@ Project File Date:  07/15/2022
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'E:\Program Files\Keil\ARM\ARMCC\Bin'
 Build target 'Receiver'
 compiling main.c...
+../Src/main.c(229): warning:  #940-D: missing return statement at end of non-void function "motor_init" 
+  }
+../Src/main.c(233): warning:  #177-D: variable "data_std"  was declared but never referenced
+  		uint16_t Temp_std[100],data_std[100];
+../Src/main.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=11816 RO-data=292 RW-data=24 ZI-data=1280  
+Program Size: Code=12448 RO-data=292 RW-data=28 ZI-data=1284  
 FromELF: creating hex file...
-"Receiver\Receiver.axf" - 0 Error(s), 0 Warning(s).
+"Receiver\Receiver.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -54,7 +59,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.5.0
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:11
 </pre>
 </body>
 </html>
