--- a/MDK-ARM/Receiver/Receiver.build_log.htm
+++ b/MDK-ARM/Receiver/Receiver.build_log.htm
@@ -21,28 +21,13 @@ Target DLL:      UL2CM3.DLL V1.164.0.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
-E:\Receiver\MDK-ARM\Receiver.uvprojx
+e:\Receiver\MDK-ARM\Receiver.uvprojx
 Project File Date:  08/01/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'E:\Program Files\Keil\ARM\ARMCC\Bin'
 Build target 'Receiver'
-compiling main.c...
-../Src/main.c(145): warning:  #550-D: variable "avg"  was set but never used
-  				uint16_t Temp_ADC[2000], avg[2];
-../Src/main.c(174): warning:  #550-D: variable "theta"  was set but never used
-  				_iq10 theta,alpha,delta_r ;
-../Src/main.c(174): warning:  #177-D: variable "alpha"  was declared but never referenced
-  				_iq10 theta,alpha,delta_r ;
-../Src/main.c(174): warning:  #177-D: variable "delta_r"  was declared but never referenced
-  				_iq10 theta,alpha,delta_r ;
-../Src/main.c(87): warning:  #550-D: variable "std"  was set but never used
-  	uint16_t std=0;
-../Src/main.c: 5 warnings, 0 errors
-linking...
-Program Size: Code=14200 RO-data=292 RW-data=32 ZI-data=1424  
-FromELF: creating hex file...
-"Receiver\Receiver.axf" - 0 Error(s), 5 Warning(s).
+"Receiver\Receiver.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -65,7 +50,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:17
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
