--- a/MDK-ARM/Receiver/Receiver.build_log.htm
+++ b/MDK-ARM/Receiver/Receiver.build_log.htm
@@ -27,6 +27,10 @@ Project File Date:  08/01/2022
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'E:\Program Files\Keil\ARM\ARMCC\Bin'
 Build target 'Receiver'
+compiling main.c...
+linking...
+Program Size: Code=14708 RO-data=292 RW-data=32 ZI-data=1424  
+FromELF: creating hex file...
 "Receiver\Receiver.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -50,7 +54,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.6.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
